--- a/index.html
+++ b/index.html
@@ -3,24 +3,21 @@
 <head>
 
 	<style type="text/css">
-		img {
-			max-width: 40%;
-			margin-left: 5%;
+		html, body {
+			margin: 0;
+			padding: 0;
+			height: 100%;
 		}
-		
-		h1 {
-			color: #CA54A5;
-			font-size: 10rem;
-			text-align: center;
+
+		body {
+			background-image: url('img/logo.png');
+			background-repeat: no-repeat;
+			background-size: contain;
+			background-position: center;
 		}
 	</style>
 	
 </head>
 <body>
-	<div class="containe2r">
-		<img src="F.svg" />
-		<img src="G2.svg" />
-	</div>
-	<h1>Frustrated Games</h1>
 </body>
 </html>
